dropdown account, phone, cart

--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_header.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_header.sass
@@ -60,10 +60,10 @@
   &__accaunt
     .dropdown-menu
       padding: 10px 0 18px 12px
-      top: 94%
+      top: 34px
   &__phone
     .dropdown-menu
-      top: 94%
+      top: 34px
     &__link
       span
         color: $text-color
@@ -87,7 +87,7 @@
   &__cart
     .dropdown-menu
       padding: 25px 13px 18px 12px
-      top: 104%
+      top: 35px
   &__language
     padding: 0
     margin: 0
@@ -95,9 +95,9 @@
       img
         margin-top: -14px
     .dropdown-menu
-      top: 105%
       padding-bottom: 25px
       margin-left: -128px
+      top: 35px
       img
         margin: 0 10px 0 20px
 		.btn-group
