--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -1,6 +1,7 @@
 @import 'libs/fonts'
 @import 'base/variables'
 
+
 *
   font-family: 'Museo Sans', sans-serif
 html
@@ -13,11 +14,13 @@ html
 
 
 
-@import 'blocks/_header'
-@import 'blocks/_menu'
-@import 'blocks/_search'
-@import 'blocks/_cart'
-@import 'blocks/_callback'
-@import 'blocks/_form'
-@import 'blocks/_menugz'
-@import 'blocks/_buttons'
+@import 'blocks/header'
+@import 'blocks/menu'
+@import 'blocks/search'
+@import 'blocks/cart'
+@import 'blocks/callback'
+@import 'blocks/form'
+@import 'blocks/menugz'
+@import 'blocks/buttons'
+
+@import 'blocks/media'
