promo block for main

--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -11,7 +11,14 @@ html
 
 .container
   position: relative
+.container-fluid
+  padding-left: 0
+  padding-right: 0
 
+.note
+  text-transform: lowercase
+  color: $grey-color
+  font-size: 10px
 
 
 @import 'blocks/header'
@@ -22,5 +29,6 @@ html
 @import 'blocks/form'
 @import 'blocks/menugz'
 @import 'blocks/buttons'
+@import 'blocks/_promo'
 
 @import 'blocks/media'
