add white & black button

--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_buttons.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_buttons.sass
@@ -33,3 +33,16 @@
     background-image: -webkit-linear-gradient(to top, #efedec, #f7f4f4)
     background-image: linear-gradient(to top, #efedec, #f7f4f4)
     box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0px -3px 1px 1px rgba(204,198,197,.5)
+
+.banner-button
+  margin-top: 20px
+  background: transparent
+  border: 2px solid $dark-grey
+  border-radius: 0
+  color: $text-color
+  text-transform: uppercase
+  font-weight: 700
+  transition: .5s all
+  &:hover, &:focus
+    background: $dark-grey
+    color: #fff
