add section promo

--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_promo.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_promo.sass
@@ -17,7 +17,7 @@
     height: 50px
     padding: 5px 0
   &__registr
-    background: rgba(202,211,5,.8)
+    background: $salat-color
     a
       color: $dark-grey
   &__deliver
