--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -30,5 +30,7 @@ html
 @import 'blocks/menugz'
 @import 'blocks/buttons'
 @import 'blocks/_promo'
+@import 'blocks/_slideshow'
+@import 'blocks/bannerhom'
 
 @import 'blocks/media'
