--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_bannerhom.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_bannerhom.sass
@@ -4,6 +4,8 @@
     padding: 0 50px
   &__descr > a
     color: $text-color
+    &:hover, &:focus
+      text-decoration: none
   &__title
     text-transform: uppercase
     font-weight: 700
