--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -108,6 +108,7 @@
       &_2
         margin-top: 5px
   .bannerhom
+    margin-top: -20px
     &__banner
       padding: 0 15px
     &__title
@@ -166,7 +167,6 @@
     &__new
       display: none
   .bannerhom
-
     &__title
       font-size: 10px
       line-height: .1
