add pover swiper

--- a/catalog/view/theme/iamtoko/stylesheet/base/_swiper.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/base/_swiper.sass
@@ -13,7 +13,8 @@
   &:before, &:after
     content: "" !important
   &:hover, &:focus
-    background: $main-color
+    filter: invert(1)
+    background: #1ffaaa
     background-repeat: no-repeat
     background-position: 50%
     transition-property: filter
