cheng main color

--- a/catalog/view/theme/iamtoko/stylesheet/base/_variables.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/base/_variables.sass
@@ -1,7 +1,8 @@
-$main-color: #d01345
+$main-color: #D93B75
 $text-color: #120e10
 $dark-grey: #2d2d2d
 $grey-color: #525050
 $light-grey: #dbdee0
 $salat-color: #c0dc29
 $purple-color: #8e3464
+$red-color: #D90452
