--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_menugz.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_menugz.sass
@@ -20,7 +20,7 @@
       &:hover, &:focus
         color: $text-color
     &_sale
-      background-color: $main-color
+      background-color: $red-color
       transform: skew(-12deg)
   &__drop
     display: none
