--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -2,6 +2,9 @@
   .header
     &__item:not(:last-child)
       padding-right: 30px
+  .latesthom
+    .container
+      padding-left: 25px
 
 @media (max-width: 1200px)
   .header
@@ -29,6 +32,14 @@
   .hamburger
     &_active
       left: 5px
+  .swiper-button-next, .swiper-button-prev
+    background-size: 17px 43px
+    width: 36px !important
+    height: 36px !important
+  .swiper-button-prev
+    left: -15px !important
+  .swiper-button-next
+    right: 0 !important
   .slideshow
     margin: 0
     margin-top: -60px
