--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -37,5 +37,6 @@ html
 @import 'blocks/_product-list'
 @import 'blocks/_attribute-color'
 @import 'blocks/_latesthom'
+@import 'blocks/_studentslideshow'
 
 @import 'blocks/_media'
