--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -53,6 +53,10 @@
         font-size: 28px
       &_2
         font-size: 35px
+      &_3
+        font-size: 30px !important
+      &_4
+        font-size: 30px
     &__appeal
       &_1
         font-size: 18px
@@ -61,6 +65,9 @@
         font-size: 14px
       &_2
         font-size: 16px
+      &_3
+        font-size: 14px !important
+        margin-top: 7px !important
     &__new
       &_1
         padding-right: 70px
@@ -74,6 +81,7 @@
       line-height: .5
     &__btn
       margin-top: 13px
+
 
 @media (max-width: 767px)
   .html_active
@@ -100,6 +108,11 @@
         font-size: 23px
       &_2
         font-size: 25px
+      &_3
+        font-size: 24px !important
+      &_4
+        font-size: 24px !important
+        margin-left: 20px
     &__appeal
       &_1
         font-size: 16px
@@ -166,6 +179,11 @@
         letter-spacing: .1px
       &_2
         font-size: 18px
+      &_3
+        font-size: 14px !important
+      &_4
+        font-size: 14px !important
+        margin-left: 10px
     &__appeal
       &_1
         display: none
@@ -175,6 +193,8 @@
         margin-top: 0
       &_2
         margin-top: 9px
+      &_3
+        display: none !important
     &__new
       display: none
   .bannerhom
