add banner instagram subscribe

--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_slideshow.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_slideshow.sass
@@ -31,6 +31,13 @@
       transform: translate(-50%, -50%)
       padding-left: 0
       padding-right: 0
+    &_3
+      top: 50%
+      left: 16%
+      transform: translateY(-50%)
+      padding-left: 0
+      padding-right: 0
+      text-align: center
   &__title
     &_1, &_2
       font-size: 55px
@@ -76,5 +83,9 @@
       font-size: 26px
       letter-spacing: -1.3px
     &_2
-        margin-top: 10px
-        text-transform: lowercase
+      margin-top: 10px
+      text-transform: lowercase
+    &_3
+      margin-top: 20px
+      color: $main-color
+      text-transform: lowercase
