--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_studentslideshow.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_studentslideshow.sass
@@ -1,12 +1,41 @@
 .slideshow
-  &__title_3
-    font-size: 40px
-  &__title_4
-    display: inline-block
-    margin-left: 40px
-    color: $main-color
-    font-size: 40px
-    background: $salat-color
-    padding: 0 10px
+  &__title
+    &_3
+      font-size: 40px
+    &_4
+      display: inline-block
+      margin-left: 40px
+      color: $main-color
+      font-size: 40px
+      background: $salat-color
+      padding: 0 10px
+    &_5
+      display: inline-block
+      margin-top: 30px
+      color: $main-color
+      font-size: 25px
+      background: $salat-color
+      padding: 0 10px
+  &__btn
+    &_4
+      color: $salat-color
+      font-weight: 800
+      font-size: 34px
+      text-transform: lowercase
+      box-shadow: 0 0 0 60px rgba(0, 0, 0, 0) inset, .1em .1em .2em rgba(82, 80, 80, .3)
+      border-radius: 0
+      transition: .25s all
+      &:hover, &:focus
+        color: $main-color
+        box-shadow:  0 0 0 60px rgba(0, 0, 0, 0) inset, .1em .1em .2em rgba(82, 80, 80, .1)
+      &:hover, &:focus svg
+        fill: $main-color
+      svg
+        fill: $salat-color
+        margin-right: 10px
+
 #slideshow1
   margin-top: -60px
+
+.slideshow__btn_4:hover svg
+   fill: $main-color
