instagram subscribe mobile

--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -57,6 +57,9 @@
         font-size: 30px !important
       &_4
         font-size: 30px
+      &_5
+        font-size: 20px
+        margin-top: 18px
     &__appeal
       &_1
         font-size: 18px
@@ -68,11 +71,17 @@
       &_3
         font-size: 14px !important
         margin-top: 7px !important
+      &_4
+        font-size: 22px
+        svg
+          width: 14px
     &__new
       &_1
         padding-right: 70px
         margin-top: 5px
         font-size: 16px
+      &_3
+        margin-top: 10px
   .bannerhom
     &__banner
       padding: 0 25px
@@ -113,6 +122,9 @@
       &_4
         font-size: 24px !important
         margin-left: 20px
+      &_5
+        font-size: 16px
+        margin-top: 13px
     &__appeal
       &_1
         font-size: 16px
@@ -123,6 +135,10 @@
       &_2
         font-size: 14px
         margin-top: 21px
+      &_4
+        font-size: 18px
+        svg
+          width: 11px
     &__new
       &_1
         margin-top: 1px
@@ -131,6 +147,9 @@
         letter-spacing: 1px
       &_2
         margin-top: 5px
+      &_3
+        margin-top: 6px
+        font-size: 12px
   .bannerhom
     margin-top: -20px
     &__banner
@@ -173,6 +192,8 @@
         top: 10px
         padding-left: 91px
         padding-right: 23px
+      &_3
+        left: 13%
     &__title
       &_1
         font-size: 14px
@@ -184,6 +205,10 @@
       &_4
         font-size: 14px !important
         margin-left: 10px
+      &_5
+        font-size: 11px
+        margin-top: 13px
+        letter-spacing: .05px
     &__appeal
       &_1
         display: none
@@ -195,6 +220,8 @@
         margin-top: 9px
       &_3
         display: none !important
+      &_4
+        font-size: 16px
     &__new
       display: none
   .bannerhom
