--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_studentslideshow.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_studentslideshow.sass
@@ -32,8 +32,8 @@
         fill: $main-color
       svg
         fill: $salat-color
-        margin-right: 10px
-
+        width: 20px
+        height: auto
 #slideshow1
   margin-top: -60px
 
