--- a/catalog/view/theme/default/template/extension/module/latesthom.twig
+++ b/catalog/view/theme/default/template/extension/module/latesthom.twig
@@ -1,8 +1,8 @@
 <section class="latesthom">
     <div class="container">
         <div class="swiper-viewport latesthom__swiper-viewport">
-            <h2 class="latesthom__title">{{ heading_title }}</h2>
-            <div class="latesthom__text">{{ latesthom_appeal }}</div>
+            <h2 class="title">{{ heading_title }}</h2>
+            <div class="subtitle">{{ latesthom_appeal }}</div>
             <div class="latesthom__button"><a href="{{ latesthom_all }}" class="latesthom__btn">{{ all_catalog }}</a></div>
             <div class="swiper-container1 swiper-container latesthom__swiper-container">
                 <div class="swiper-wrapper">
