--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -228,7 +228,7 @@
     &__title
       font-size: 10px
       line-height: .1
-    &__text
+    &__subtitle
       font-size: 10px
     &__btn
       margin-top: 8px
