--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -38,5 +38,7 @@ html
 @import 'blocks/_attribute-color'
 @import 'blocks/_latesthom'
 @import 'blocks/_studentslideshow'
+@import 'blocks/_newstoko'
+@import 'blocks/_title'
 
 @import 'blocks/_media'
