--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_newstoko.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_newstoko.sass
@@ -1,12 +1,42 @@
 .newstoko
+  margin-top: 100px
   &__form
     width: 300px
     margin-right: auto
     margin-left: auto
     margin-top: 40px
+    .text-danger
+      background-color: #fff
+      box-shadow: 0 6px 12px rgba(0, 0, 0, .175)
+      color: $main-color
+      display: block
+      margin-left: 50px
+      padding: 30px 50px
+      position: absolute
+      webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175)
+      width: auto
+      z-index: 1000
+
+    .text-success
+      background-color: #fff
+      box-shadow: 0 6px 12px rgba(0, 0, 0, .175)
+      color: $text-color
+      display: block
+      margin: 0
+      margin-left: 50px
+      padding: 30px 40px
+      position: absolute
+      webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175)
+      width: auto
+      z-index: 1000
   &__btn
     border-top-right-radius: 0
     border-bottom-right-radius: 0
+    transition: all .1s linear
+    &:hover, &:focus
+      background-color: #000
+      svg
+        fill: #fff
   svg
     width: 18px
     height: auto
