--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -65,7 +65,10 @@
       line-height: .5
     &__btn
       margin-top: 13px
-
+  .advantages
+    margin-top: 10px
+  .newstoko
+    margin-top: 50px
 
 @media (max-width: 767px)
   .html_active
@@ -113,10 +116,24 @@
       padding: 0 15px
     &__title
       font-size: 21px
+  .latesthom
+    margin-top: 20px
+  .advantages
+    margin-top: 0
+    svg
+      width: 60px
+      height: auto
+    &__title1
+      margin-top: 25px !important
+
 
 @media (max-width: 575px)
   .fixed
     top: -87px
+  .title
+    font-size: 23px
+  .subtitle
+    font-size: 14px
   .hamburger
     left: 15px
     width: 25px
@@ -173,8 +190,18 @@
     &__title
       font-size: 10px
       line-height: .1
+      letter-spacing: 1px
     &__subtitle
       font-size: 10px
     &__btn
       margin-top: 8px
+      font-size: 10px
+  .latesthom
+    margin-top: 0
+  .advantages
+    .title
+      font-size: 14px
+    &__item
+      width: 100px
+    &__btn
       font-size: 10px
