--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_buttons.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_buttons.sass
@@ -46,3 +46,60 @@
   &:hover, &:focus
     background: $dark-grey
     color: #fff
+
+/*---------Кнопка перезвоним---------*/
+.button-coll-side
+	position: fixed
+	display: none
+	transform: rotate(90deg)
+	transform-origin: right top 0
+	right: 0
+	padding: 0
+	padding-left: 20px
+	bottom: 35%
+	z-index: 1000
+	color: #ffffff
+	background-color: $main-color
+	font-size: 14px
+	letter-spacing: 1px
+	font-weight: 500
+	text-transform: lowercase
+	height: auto
+	outline: none
+	&:hover
+		background: darken($main-color, 5%)
+		color: #fff
+		.fa
+			-webkit-animation: wiggle .05s alternate ease infinite
+			animation: wiggle .05s alternate ease infinite
+			background: transparent
+	&:active,
+	&:focus
+		background: darken($main-color, 10%)
+		color: #fff
+	.fa
+		background: darken($main-color, 5%)
+		font-size: 20px
+		padding: 6px	9px
+		margin-left: 15px
+		transform: rotateY(-180deg)
+
+/*---------Кнопка подарок Скидка---------*/
+.button-sale-popup
+	bottom: 25%
+	transform: rotate(0)
+	padding: 0
+	height: 44px
+	right: 0
+	.fa
+		margin: 0
+		padding: 6px 6px 5px 6px
+		svg
+			fill: #ffffff
+			width: 22px
+
+@-webkit-keyframes wiggle
+	from
+		-webkit-transform: rotate(0deg)
+	to
+		-webkit-transform: rotate(-30deg)
