css for categorys

--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_attribute-color.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_attribute-color.sass
@@ -1,8 +1,7 @@
 .product-layout, #information-information .product-layout
 	.attributes-color
 		text-align: left
-		position: absolute
-		top: 40%
+		margin-top: -5px
 		.attribute
 			display: inline-block
 			width: 10px
