name class wrapp

--- a/catalog/view/theme/iamtoko/template/product/category.twig
+++ b/catalog/view/theme/iamtoko/template/product/category.twig
@@ -120,7 +120,7 @@
         <div class="product-layout product-list col-lg-3 col-md-3 col-xs-12">
           <div class="product-thumb">
             <div class="image"><a href="{{ product.href }}"><img src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-responsive" /></a></div>
-            <div>
+            <div class="wrapp">
               <div class="caption">
                 <h4><a href="{{ product.href }}">{{ product.name }}</a></h4><span></span>
                 <p>{{ product.description }}</p>
