--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_product-list.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_product-list.sass
@@ -57,3 +57,10 @@
 						left: 50%
 						transform: translate(-50%, -50%)
 						width: 22px
+	.fastorder
+		position: absolute
+		width: 100%
+		height: 40px
+		bottom: 120px
+		left: 60%
+		transform: translate(-50%, 0)
