--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -5,6 +5,7 @@
 
 *
   font-family: 'Museo Sans', sans-serif
+
 .visually-hidden
 	clip: rect(0 0 0 0)
 	height: 1px
@@ -18,6 +19,11 @@ html
   margin-left: 400px
 a[aria-expanded="true"]::after, a[aria-expanded="true"]::before
 	display: none
+body
+	margin: 0
+	padding: 0
+	box-sizing: border-box
+	overflow-x: hidden
 .container
   position: relative
 .container-fluid
