--- a/catalog/view/theme/default/template/extension/module/ocfilter/filter_item.twig
+++ b/catalog/view/theme/default/template/extension/module/ocfilter/filter_item.twig
@@ -1,7 +1,7 @@
 <div class="list-group-item ocfilter-option" id="option-{{ option.option_id }}">
   <div class="ocf-option-name">
     {{ option.name }}
-
+ <a class="clos-sort" href="#sub-filter-{{ option.option_id }}" class="btn btn-default" data-toggle="collapse"></a>
 		{% if option.type == 'slide' or option.type == 'slide_dual' %}
     <span id="left-value-{{ option.option_id }}">{{ option.slide_value_min_get }}</span>
 		{% if option.type == 'slide_dual' %}
@@ -37,7 +37,7 @@
       </div>
     </div>
     {% else %}
-    {% include 'default/template/extension/module/ocfilter/value_list.twig' %}
+    <div id="sub-filter-{{ option.option_id }}" class="sub-filter collapse in">{% include 'default/template/extension/module/ocfilter/value_list.twig' %}</div>
     {% endif %}
 
     {% endif %}
