--- a/catalog/view/theme/default/template/extension/module/ocfilter/module.twig
+++ b/catalog/view/theme/default/template/extension/module/ocfilter/module.twig
@@ -1,7 +1,7 @@
 {% if options or show_price %}
 <div class="ocf-offcanvas ocfilter-mobile hidden-sm hidden-md hidden-lg">
   <div class="ocfilter-mobile-handle">
-    <button type="button" class="btn btn-primary" data-toggle="offcanvas"><i class="fa fa-filter"></i></button>
+    <button type="button" class="btn btn-primary" data-toggle="offcanvas"><i class="fa fa-filter"></i>{{ heading_title }}</button>
   </div>
   <div class="ocf-offcanvas-body"></div>
 </div>
