--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -86,11 +86,13 @@
   .newstoko
     margin-top: 50px
   #product-category #column-left
-    width: 22%
+    width: 24%
     margin-left: 20px
     margin-right: -15px
 
 @media (max-width: 767px)
+  .fixed
+    margin-top: -87px
   .html_active
     margin-left: 0
   .hamburger
@@ -173,8 +175,6 @@
       font-size: 12px
 
 @media (max-width: 575px)
-  .fixed
-    margin-top: -87px
   .title
     font-size: 23px
   .subtitle
@@ -267,3 +267,4 @@
       text-align: center
     &__item
       margin-bottom: 20px
+.ocf-offcanvas .ocfilter-mobile-handle
