--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_menu.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_menu.sass
@@ -81,8 +81,9 @@
     margin-bottom: 4px
     transition: 0.5s all
   &_active
-    left: -217px
-    top: -3px
+    position: fixed
+    left: 350px
+    top: 29px
     z-index: 100
     span
       margin-bottom: -2px
