--- a/catalog/view/theme/iamtoko/template/product/product.twig
+++ b/catalog/view/theme/iamtoko/template/product/product.twig
@@ -437,7 +437,7 @@
   </div>
 </div>
 <script src="catalog/view/theme/iamtoko/js/easyzoom.js" type="text/javascript"></script>
-
+<script src="catalog/view/javascript/slick/slick.min.js"></script>
 <script type="text/javascript"><!--
 
 $('.easyzoom').easyZoom();
