--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_cart.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_cart.sass
@@ -13,3 +13,11 @@
 		span
 			font-size: 12px
 			font-weight: 600
+	.btn-danger
+		background: $main-color
+		border-radius: 10em
+		padding: 5px 10px
+	.dropdown-menu
+		width: 460px
+		.img-thumbnail
+			border-radius: 0
