--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -108,6 +108,8 @@
       padding: 8px 0 0 15px
     &__accaunt .dropdown-menu
       left: 0
+  #cart .dropdown-menu
+    right: -100px
   .slideshow
     &__title
       &_2
@@ -208,6 +210,9 @@
   .menu-right
     padding-left: 0
     padding-right: 0
+  #cart .dropdown-menu
+    width: 340px
+    right: -94px
   .slideshow
     &__descr
       &_3
