--- a/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/stylesheet.sass
@@ -29,7 +29,10 @@ body
 .container-fluid
   padding-left: 0
   padding-right: 0
-
+a
+	color: $purple-color
+	&:hover, &:focus
+		color: $purple-color
 .note
   text-transform: lowercase
   color: $grey-color
@@ -1933,85 +1936,6 @@ h1
 		&:hover, &:focus
 			text-decoration: underline
 
-/*----- Личный кабинет------ */
-.category-head
-	.main-underline
-		text-transform: uppercase
-		font-size: 25px
-#quickcheckoutconfirm
-	#login-box #checkout .quickcheckout-heading, #payment-address .quickcheckout-heading, #payment-method .quickcheckout-heading
-		font-size: 14px !important
-		text-transform: lowercase
-	input[type="checkbox"]
-		position: relative
-		margin: 4px 0 0
-		line-height: normal
-		padding: 0
-		text-align: left
-		font-size: inherit
-		color: inherit
-		appearance: checkbox
-		height: 13px
-	a .fa-question-circle::before
-		color: #000	!important
-	.quickcheckout-content
-		label
-			text-transform: lowercase
-	.btn-primary
-		border: none
-		text-decoration: none
-		background-color: #120e10
-		border-radius: 0
-		color: #fff
-		text-transform: lowercase
-		font:
-			weight: 400
-			size: 15.5px
-		transition: background-color .25s ease
-		outline: none
-		&:hover, &:active, &:focus
-			background-color: lighten(#120e10, 10%)
-	#payment-method
-		.quickcheckout-content
-			p, .table
-				display: none
-			strong
-				text-transform: lowercase
-				font-weight: 400
-		.quickcheckout-heading
-			display: none
-	#cart1
-		.quickcheckout-content .quickcheckout-cart
-			thead > tr > td
-				text-transform: lowercase
-			td.image img
-				width: 80px
-			td.name a
-				color: #000000
-				font-size: 12px
-				&:hover, &:focus
-					text-decoration: underline
-			td.quantity
-				.btn-primary
-					padding: 0 10px
-					background-color: transparent
-					color: #000000
-					border: 1px solid #ddd
-				.btn-danger
-					background: #f294c8
-					border: #f294c8
-					border-radius: 0
-					.glyph-icon.icon-cancel:before
-						font-family: FontAwesome
-						content: "\f00d"
-	#totals-wrap
-		.total-wrap:not(:nth-child(1))
-			display: none
-	#terms
-		label a
-			color: #F20789
-			&:hover, &:focus
-				text-decoration: underline
 
 /*-----Блог------ */
 .blog-blog
@@ -2186,5 +2110,6 @@ h1
 @import 'blocks/_sorts'
 @import 'blocks/_ocfilter'
 @import 'blocks/_pagination'
+@import 'blocks/_quickchekout'
 
 @import 'blocks/_media'
