--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -277,4 +277,7 @@
       text-align: center
     &__item
       margin-bottom: 20px
-.ocf-offcanvas .ocfilter-mobile-handle
+  .qc-col-1, .qc-step
+    padding-left: 0 !important
+    padding-right: 0 !important
+    min-width: 200px
