--- a/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
+++ b/catalog/view/theme/iamtoko/stylesheet/blocks/_media.sass
@@ -27,6 +27,12 @@
       font-size: 10px
   #product-category #column-left
     width: 17%
+  #product-product
+    .video-product
+      left: 30px
+      video
+        width: 382px
+        height: auto
 
 @media (max-width: 991px)
   .header
@@ -93,6 +99,9 @@
     width: 24%
     margin-left: 20px
     margin-right: -15px
+  #product-product
+    .video-product video
+      width: 455px
 
 @media (max-width: 767px)
   .fixed
@@ -177,6 +186,8 @@
       font-size: 14px
     &__button
       font-size: 12px
+  #product-product .video-product video
+    width: 418px
 
 @media (max-width: 575px)
   .title
@@ -283,3 +294,15 @@
     min-width: 200px
   .stock
     font-size: 10px
+  #product-product
+    .video-product
+      left: 11px
+      video
+        width: 245px
+
+@media (max-width: 369px)
+  #product-product
+    .video-product
+      left: 11px
+      video
+        width: 219px
